--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,5 @@
 [versions]
 agp = "8.9.0"
-hiltNavigationCompose = "1.2.0"
 kotlin = "2.1.10"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -13,11 +12,15 @@ dagger-hilt = "2.52"
 retrofit = "2.11.0"
 okhttp = "4.12.0"
 gson = "2.10.1"
+hilt-compose = "1.2.0"
+coil = "2.7.0"
+compose-navigation = "2.8.8"
+compose-constraint = "1.1.1"
+room-version = "2.6.1"
 
 [libraries]
 
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-androidx-hilt-navigation-compose-v100 = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -31,14 +34,24 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
-dagger-hilt-android = { module = "com.google.dagger:hilt-android", version.ref ="dagger-hilt" }
-dagger-hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "dagger-hilt" }
-retrofit = { module = "com.squareup.retrofit2:retrofit",version.ref = "retrofit" }
-retrofit-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
-retrofit-okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
-retrofit-urlConnection = { module = "com.squareup.okhttp3:okhttp-urlconnection", version.ref = "okhttp" }
-retrofit-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
-gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+dagger-hilt-android = {module ="com.google.dagger:hilt-android", version.ref = "dagger-hilt"}
+dagger-hilt-compiler = {module = "com.google.dagger:hilt-android-compiler", version.ref = "dagger-hilt"}
+retrofit  = {module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit"}
+retrofit-gson  = {module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit"}
+retrofit-converter-gson  = {module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit"}
+retrofit-okhttp  = {module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp"}
+retrofit-urlConnection  = {module = "com.squareup.okhttp3:okhttp-urlconnection", version.ref = "okhttp"}
+retrofit-logging  = {module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp"}
+gson  = {module = "com.google.code.gson:gson", version.ref = "gson"}
+dagger-hilt-compose  = {module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt-compose"}
+coil = {module = "io.coil-kt:coil-compose" , version.ref = "coil"}
+compose-navigation = {module = "androidx.navigation:navigation-compose" , version.ref = "compose-navigation"}
+compose-constraint = {module = "androidx.constraintlayout:constraintlayout-compose" , version.ref = "compose-constraint"}
+room-runtime = {module = "androidx.room:room-runtime", version.ref = "room-version"}
+room-compiler = {module = "androidx.room:room-compiler", version.ref = "room-version"}
+room-kapt = {module = "androidx.room:room-compiler", version.ref = "room-version"}
+room-ktx = {module = "androidx.room:room-ktx", version.ref = "room-version"}
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
